k8s/1-admin/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shoppingdemo
  name: admin-pod
  labels:
    app: shoppingdemo
    type: spring-boot
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: admin
    spec:
      serviceAccountName: admin
      containers:
      - image: joshiste/admin:chaos-ws-k8s
        imagePullPolicy: Never
        name: admin
        ports:
        - containerPort: 8080
        resources: {}
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/health
          initialDelaySeconds: 30
          failureThreshold: 3
          timeoutSeconds: 5
      restartPolicy: Always
  selector:
    matchLabels:
      app: admin
