k8s/1-admin/mailhog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shoppingdemo
  name: mailhog-pod
  labels:
    app: mailhog
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - image: mailhog/mailhog
          imagePullPolicy: IfNotPresent
          name: mailhog
          ports:
            - containerPort: 1025
            - containerPort: 8025
          resources: {}
          readinessProbe:
            tcpSocket:
              port: 1025
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
          livenessProbe:
            tcpSocket:
              port: 1025
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
      restartPolicy: Always
  selector:
    matchLabels:
      app: mailhog
