k8s/1-admin/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: shoppingdemo
  name: admin-service
  labels:
    type: spring-boot
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    app: admin
