k8s/1-admin/mailhog-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: shoppingdemo
  name: mailhog-service
spec:
  ports:
    - name: "http"
      port: 8025
      targetPort: 8025
    - name: "smtp"
      port: 1025
      targetPort: 1025
  selector:
    app: mailhog
