k8s/1-admin/admin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: shoppingdemo
spec:
  rules:
    - host: admin.workshop.demo
    #- host: fashion-HOSTPATTERN.chaos.codecentric.io
      http:
        paths:
          - path: /
            backend:
              serviceName: admin-service
              servicePort: 8080
